--- a/Core/src/Umbrella.Utilities/Umbrella.Utilities.csproj
+++ b/Core/src/Umbrella.Utilities/Umbrella.Utilities.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <LangVersion>latest</LangVersion>
     <Configurations>Debug;Release;AzureDevOps</Configurations>
     <DocumentationFile>bin\Release\netstandard2.0\Umbrella.Utilities.xml</DocumentationFile>
-	<PublishRepositoryUrl>true</PublishRepositoryUrl>
+	  <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
   </PropertyGroup>
