Added new unit tests and benchmarks to test new method implementations which take advantage of Span. Added a new CacheKeyUtility to ensure consistency when creating cache keys (WIP) - currently only used internally by the hosting environment classes.

--- a/Legacy/benchmark/Umbrella.Legacy.WebUtilities.Benchmark/Umbrella.Legacy.WebUtilities.Benchmark.csproj
+++ b/Legacy/benchmark/Umbrella.Legacy.WebUtilities.Benchmark/Umbrella.Legacy.WebUtilities.Benchmark.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>net47</TargetFramework>
     <LangVersion>latest</LangVersion>
     <IsPackable>false</IsPackable>
     <Configurations>Debug;Release;AzureDevOps</Configurations>
@@ -11,20 +11,21 @@
   <PropertyGroup Condition="'$(Configuration)'=='AzureDevOps'">
     <Optimize>true</Optimize>
   </PropertyGroup>
-  
+
   <ItemGroup>
     <Compile Remove="BenchmarkDotNet.Artifacts\**" />
     <EmbeddedResource Remove="BenchmarkDotNet.Artifacts\**" />
     <None Remove="BenchmarkDotNet.Artifacts\**" />
   </ItemGroup>
-  
+
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.11.3" />
     <PackageReference Include="Moq" Version="4.10.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.1.2" />
   </ItemGroup>
-  
+
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Umbrella.Utilities\Umbrella.Utilities.csproj" />
+    <ProjectReference Include="..\..\src\Umbrella.Legacy.WebUtilities\Umbrella.Legacy.WebUtilities.csproj" />
   </ItemGroup>
-  
+
 </Project>
