Conditional compilation to remove benchmark baselines from DevOps builds. General benchmark work. Optimizations. Added TODO comments.

--- a/Core/benchmark/Umbrella.Utilities.Benchmark/Umbrella.Utilities.Benchmark.csproj
+++ b/Core/benchmark/Umbrella.Utilities.Benchmark/Umbrella.Utilities.Benchmark.csproj
@@ -10,6 +10,7 @@
 
   <PropertyGroup Condition="'$(Configuration)'=='AzureDevOps'">
     <Optimize>true</Optimize>
+    <DefineConstants>AzureDevOps</DefineConstants>
   </PropertyGroup>
   
   <ItemGroup>
