Ignore Code Coverage files.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ BenchmarkDotNet.Artifacts
 /coverage
 /git-mv-with-history.sh
 /DynamicImage/test/Umbrella.DynamicImage.Impl.Test/Output
+*.coverage
