Updated NuGet packages. Added a classic ASP.NET samples project using AutoFac as the DI container. Added TODO comments. Fixes Changed the internals of the FrontEndCompressionMiddleware to abstract away the file system using the Microsoft.Extensions.FileProvider stuff.

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ BenchmarkDotNet.Artifacts
 /git-mv-with-history.sh
 /DynamicImage/test/Umbrella.DynamicImage.Impl.Test/Output
 *.coverage
+/packages
