Added a new Kentico project for some common utility code.

--- a/Kentico/src/Umbrella.Kentico.Utilities/Umbrella.Kentico.Utilities.csproj
+++ b/Kentico/src/Umbrella.Kentico.Utilities/Umbrella.Kentico.Utilities.csproj
@@ -14,28 +14,29 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <PackageId>Umbrella.Kentico.DataAccess</PackageId>
+    <PackageId>Umbrella.Kentico.Utilities</PackageId>
     <Version>2.6.0-preview-00004</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2019</Copyright>
     <Description>
-      This package contains Data Access infrastructure for working with Kentico Custom Tables.
+      This package contains various utilties for use when developing with Kentico.
     </Description>
     <PackageLicenseUrl>https://github.com/zinofi/Umbrella/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\DataAccess\src\Umbrella.DataAccess.Abstractions\Umbrella.DataAccess.Abstractions.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Kentico.Libraries" Version="10.0.35" />
+    <PackageReference Include="Microsoft.Owin" Version="4.0.0" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Core\src\Umbrella.Utilities\Umbrella.Utilities.csproj" />
   </ItemGroup>
 
 </Project>
