Added a generic type converter. This is based on the code that converts string app setting values into their target types and has been extracted into its own class for use with other things, e.g. converting string file metadata property values. Added support to the Umbrella file system for reading / writing file metadata. Added an additional basic unit test to test the read / write mechanism - needs more tests writing. Fixed breaking changes in other unit tests impacted by all of these changes.

--- a/.editorconfig
+++ b/.editorconfig
@@ -61,7 +61,7 @@ csharp_preserve_single_line_blocks = true
 #Style - expression bodied member options
 
 #prefer block bodies for accessors
-csharp_style_expression_bodied_accessors = false:suggestion
+csharp_style_expression_bodied_accessors = true:suggestion
 #prefer block bodies for constructors
 csharp_style_expression_bodied_constructors = false:suggestion
 #prefer expression-bodied members for methods
