--- a/Kentico/src/Umbrella.Kentico.Utilities/Umbrella.Kentico.Utilities.csproj
+++ b/Kentico/src/Umbrella.Kentico.Utilities/Umbrella.Kentico.Utilities.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net461</TargetFramework>
@@ -20,7 +20,7 @@
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2019</Copyright>
     <Description>
-      This package contains various utilties for use when developing with Kentico.
+      This package contains various utilities for use when developing with Kentico.
     </Description>
     <PackageLicenseUrl>https://github.com/zinofi/Umbrella/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
